; ModuleID = '/home/carl/AnghaBench/netdata/daemon/extr_signals.c_signals_unblock.c'
source_filename = "/home/carl/AnghaBench/netdata/daemon/extr_signals.c_signals_unblock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIG_UNBLOCK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"SIGNAL: Could not unblock signals for threads\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @signals_unblock() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @sigfillset(i32* %1)
  %3 = load i32, i32* @SIG_UNBLOCK, align 4
  %4 = call i32 @pthread_sigmask(i32 %3, i32* %1, i32* null)
  %5 = icmp eq i32 %4, -1
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = call i32 @error(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %0
  ret void
}

declare dso_local i32 @sigfillset(i32*) #1

declare dso_local i32 @pthread_sigmask(i32, i32*, i32*) #1

declare dso_local i32 @error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
